# AML-GNN-project

./: .gitattributes  .gitignore  README.MD  data_loader_test.ipynb  environment_bernard.yml  models.py  pyproject.toml  requirements.txt
Baseline_ML/: Feature Engineering.ipynb
Feature_Engineering/: Feature Engineering.ipynb
Feature_Engineering/Dataset/: accounts_v1.csv  transactions_v1.csv
Subgraph_learning/: subgraph_learning.ipynb
classifier_src/: baseline.ipynb  convnet.ipynb  environment.yml  metis.ipynb
classifier_src/modules/: feature_engineering.py  model_training.py  visualizer.py
classifier_src_soc/: README.md  baseline.ipynb  convnet.ipynb  env_new.yml  node2vec.ipynb  soc_convnet.py  soc_convnet_rwpe.py  soc_gineconvnet.py  soc_gineconvnet_rwpe.py  soc_transformer.py  soc_transformer_edge.py  soc_transformer_rwpe.py  train_slurm_job.sh  train_slurm_job_convnet_rwpe.sh  train_slurm_job_gcn.sh  train_slurm_job_gineconv.sh  train_slurm_job_gineconv_rwpe.sh  train_slurm_job_transformer.sh  train_slurm_job_transformer_edge.sh  train_slurm_job_transformer_rwpe.sh
classifier_src_soc/logs/: convnet_rwpe_train_281299.out  convnet_rwpe_train_283418.out  convnet_rwpe_train_285069.out  convnet_rwpe_train_285100.out  gcn_train_280321.out  gcn_train_283413.out  gcn_train_285098.out  gine_train_280348.out  gine_train_285101.out  gineconv_rwpe_train_281301.out  (+26 more)
eda_src/: data_loader.py  eda.ipynb  eda_bernard.ipynb  feature_engineering.py  graph_builder.py  pattern_analyzer.py  visualization.py
supervised_graph_src/: graph_node_classification.ipynb
(+2 files in other folders)
