[project]
name = "gnn"
version = "0.1.0"
description = ""
authors = [
    {name = "tankahxuan",email = "tankahxuan3894@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=1.5.0)",
    "numpy (<2.0)",
    "matplotlib (>=3.6.0)",
    "seaborn (>=0.12.0)",
    "plotly (>=5.11.0)",
    "networkx (>=2.8.0)",
    "jupyter (>=1.0.0)",
    "ipykernel (>=6.0.0)",
    "scikit-learn (>=1.1.0)",
    "tqdm (>=4.64.0)",
    "kagglehub (>=0.1.0)",
    "fastparquet (>=2024.11.0)",
    "dgl (==2.2.1)",
    "scikit-learn (==1.7.2)",
    "pydantic (>=2.12.1,<3.0.0)",
    "torch (==2.3.0)",
    "torchdata (==0.7.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
